--- a/index.html
+++ b/index.html
@@ -25,5 +25,37 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Exciting tours to adventurous people</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repellendus officiis sint, fugiat sunt aspernatur nobis ut odit quas
+              fugit dicta nesciunt sit illum pariatur aliquid atque? Impedit, quo quod.
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never had before</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus optio itaque mollitia ut minima voluptates!
+            </p>
+
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1" />
+              <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2" />
+              <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3" />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
