--- a/index.html
+++ b/index.html
@@ -291,5 +291,28 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item"><a href="" class="footer__link">Company</a></li>
+              <li class="footer__item"><a href="" class="footer__link">Contact us</a></li>
+              <li class="footer__item"><a href="" class="footer__link">Carrers</a></li>
+              <li class="footer__item"><a href="" class="footer__link">Privacy</a></li>
+              <li class="footer__item"><a href="" class="footer__link">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Bult by <a href="#" class="footer__link">David Choloyan</a> just for fun. Copyright &copy by <a href="#" class="footer__link">David Choloyan</a>. You are allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own. A credit to original author David Shamsani, is of course highly appreciated!
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
