--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+      <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+
+      <div class="navigation__background">&nbsp;</div>
+
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <header class="header">
       <div class="header__logo-box">
         <img src="./img/logo-white.png" alt="Logo" class="header__logo" />
@@ -309,7 +330,7 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Bult by <a href="#" class="footer__link">David Choloyan</a> just for fun. Copyright &copy by <a href="#" class="footer__link">David Choloyan</a>. You are allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own. A credit to original author David Shamsani, is of course highly appreciated!
+            Built by <a href="#" class="footer__link">David Choloyan</a> just for fun. Copyright &copy by <a href="#" class="footer__link">David Choloyan</a>. You are allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own. A credit to original author David Shamsani, is of course highly appreciated!
           </p>
         </div>
       </div>
